# talentdb

./: .env.example  .gitignore  README.md  gas.py  main.py  mantap.py  notion.py  pyproject.toml  requirements.txt  sync.py
.github/workflows/: eFishery-Manual-Sync.yml  eFishery-scheduler.yml  sched-public.yml
tests/: gas.py  mantap.py  pyproject.toml
